Added packaging data

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,9 +7,30 @@ GlobalDefaultServerGameMode="/Script/EyeXSamples.EyeXSamplesGameMode"
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="C:/EyeXTestBuild")
-FullRebuild=False
+StagingDirectory=(Path="C:/Stage/EyeX4UE4")
+FullRebuild=True
 ForDistribution=False
+IncludeDebugFiles=False
 UsePakFile=True
+bGenerateChunks=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path=)
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeCrashReporter=True
+InternationalizationPreset=English
+CulturesToStage=en
+DefaultCulture=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
++MapsToCook=(FilePath="Start_BP.umap")
++MapsToCook=(FilePath="Presence_BP_Example")
++MapsToCook=(FilePath="GazePoint_BP_Example")
++MapsToCook=(FilePath="GazeInteraction_BP_Example")
++MapsToCook=(FilePath="GazeDepthOfField_BP_Example")
++MapsToCook=(FilePath="Fixation_BP_Example")
++MapsToCook=(FilePath="EyePosition_BP_Example")
+DirectoriesToAlwaysStageAsNonUFS=(Path="../Plugins")
 
 
