Changed default directory

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,7 +7,7 @@ GlobalDefaultServerGameMode="/Script/EyeXSamples.EyeXSamplesGameMode"
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="C:/Stage/EyeX4UE4")
+StagingDirectory=(Path="C:/EyeXTestBuild")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
