--- a/EyeXSamples.uproject
+++ b/EyeXSamples.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.11",
+	"EngineAssociation": "4.12",
 	"Category": "",
 	"Description": "A collection of samples demonstrating the use of the EyeX Plugin for Unreal Engine 4.",
 	"Modules": [
@@ -22,6 +22,11 @@
 		{
 			"Name": "Paper2D",
 			"Enabled": false
+		},
+		{
+			"Name": "Substance",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/offers/2f6439c2f9584f49809d9b13b16c2ba4"
 		}
 	]
 }
